@@ -135,7 +135,7 @@ Chronological list of authors
   - Hugo MacDermott-Opeskin
   - Anshul Angaria
   - Shubham Sharma
-
+  - Yuxuan Zhuang
 
 External code
 -------------
